# WWen

./: .gitignore  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/agents/: build.agent.md  plan.agent.md  review.agent.md
.github/prompts/: phase-bootstrap.prompt.md  phase-generate-case.prompt.md  phase-review.prompt.md
configs/: AI_Config.md  qwen3_vl.json
docs/: 00_OVERVIEW.md  01_PRD.md  02_ARCHITECTURE.md  03_SKILL_CATALOG.md  04_API_SPEC.md  05_DATA_MODEL.md  06_DEVELOPMENT_ROADMAP.md  07_RISK_FEASIBILITY.md  08_RESUME.md
frontend/: index.html  package.json  vite.config.js
frontend/src/: App.jsx  styles.css
requirements/: sample_requirement.md
scripts/: start-web.bat  start-web.ps1
src/hmi_agent/: __init__.py  config.py  executor.py  generator.py  main.py  models.py  observer.py  orchestrator.py  webapp.py
src/hmi_agent/static/: app.js  index.html  styles.css
tests/: test_config.py
